--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Display image tag
       run: |
-        export TAG=$env:GITHUB_REF_NAME_$env:GITHUB_RUN_NUMBER
+        export TAG=$GITHUB_REF_NAME_$GITHUB_RUN_NUMBER
         echo $TAG
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag qgis-server:$TAG
