--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -2,17 +2,29 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: ["master", "develop"]
+
+env:
+  TAG: ${{GITHUB_REF_NAME}}_${{GITHUB_RUN_NUMBER}}
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-        export TAG=${GITHUB_REF_NAME}_${GITHUB_RUN_NUMBER}
-        docker build . --file Dockerfile --tag qgis-server:$TAG
+      - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: mapogram/${{ env.TAG }}:latest
+          cache-from: type=registry,ref=mapogram/${{ env.TAG }}:buildcache
+          cache-to: type=registry,ref=mapogram/${{ env.TAG }}:buildcache,mode=max
