--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -5,7 +5,7 @@ on:
     branches: ["master", "develop"]
 
 env:
-  TAG: ${{ env.GITHUB_REF_NAME }}_${{ env.GITHUB_RUN_NUMBER }}
+  TAG: ${{ github.ref_name }}_${{ github.run_number }}
 
 jobs:
   build:
